simple batch working